--- a/internal/web/html/xui/settings.html
+++ b/internal/web/html/xui/settings.html
@@ -273,6 +273,7 @@
                   <setting-list-item type="switch" title='{{ i18n "pages.settings.subEncrypt"}}' desc='{{ i18n "pages.settings.subEncryptDesc"}}' v-model="allSetting.subEncrypt"></setting-list-item>
                   <setting-list-item type="switch" title='{{ i18n "pages.settings.subUI"}}' desc='{{ i18n "pages.settings.subUIDesc"}}' v-model="allSetting.subCustomUI"></setting-list-item>
                   <setting-list-item type="switch" title='{{ i18n "pages.settings.subShowInfo"}}' desc='{{ i18n "pages.settings.subShowInfoDesc"}}' v-model="allSetting.subShowInfo"></setting-list-item>
+                  <setting-list-item type="switch" title='{{ i18n "pages.settings.clientSynchronization" }}' desc='{{ i18n "pages.settings.clientSynchronizationDesc" }}' v-model="allSetting.syncClients"></setting-list-item>
                   <setting-list-item type="text" title='{{ i18n "pages.settings.subTitle"}}' desc='{{ i18n "pages.settings.subTitleDesc"}}' v-model="allSetting.subTitle"></setting-list-item>
                   <setting-list-item type="text" title='{{ i18n "pages.settings.subListen"}}' desc='{{ i18n "pages.settings.subListenDesc"}}' v-model="allSetting.subListen"></setting-list-item>
                   <setting-list-item type="text" title='{{ i18n "pages.settings.subDomain"}}' desc='{{ i18n "pages.settings.subDomainDesc"}}' v-model="allSetting.subDomain"></setting-list-item>
