--- a/internal/web/html/xui/index.html
+++ b/internal/web/html/xui/index.html
@@ -336,7 +336,7 @@
              v-model="xraylogModal.visible"
              :closable="true" @cancel="() => xraylogModal.visible = false"
              :class="themeSwitcher.currentTheme"
-             width="800px"
+             width="80vw"
              footer="">
       <template slot="title">
         {{ i18n "pages.index.logs" }}
@@ -350,7 +350,7 @@
       <a-form layout="inline">
         <a-form-item :style="{ marginRight: '0.5rem' }">
           <a-input-group compact>
-            <a-select size="small" v-model="xraylogModal.rows" :style="{ width: '70px' }"
+            <a-select size="small" v-model="xraylogModal.rows" :style="{ width: '80px' }"
                       @change="openXrayLogs()" :dropdown-class-name="themeSwitcher.currentTheme">
               <a-select-option value="10">10</a-select-option>
               <a-select-option value="20">20</a-select-option>
@@ -369,7 +369,7 @@
           <a-checkbox v-model="xraylogModal.showProxy" @change="openXrayLogs()">Proxy</a-checkbox>
         </a-form-item>
         <a-form-item :style="{ float: 'right' }">
-          <a-button type="primary" icon="download" @click="FileManager.downloadTextFile(xraylogModal.logs?.join('\n'), 'x-ui.log')"></a-button>
+          <a-button type="primary" icon="download" @click="downloadXrayLogs"></a-button>
         </a-form-item>
       </a-form>
       <div class="ant-input" :style="{ height: 'auto', maxHeight: '500px', overflow: 'auto', marginTop: '0.5rem' }" v-html="xraylogModal.formattedLogs"></div>
@@ -566,44 +566,60 @@
         this.formattedLogs = this.logs?.length > 0 ? this.formatLogs(this.logs) : "No Record...";
       },
       formatLogs(logs) {
-        let formattedLogs = '';
+          let formattedLogs = `
+<style>
+  table {
+    border-collapse: collapse;
+    width: auto;
+  }
 
-        logs.forEach((log, index) => {
-          if(index > 0) formattedLogs += '<br>';
+  table td, table th {
+    padding: 2px 15px;
+  }
+</style>
 
-          const parts = log.split(' ');
+<table>
+    <tr>
+        <th>Date</th>
+        <th>From</th>
+        <th>To</th>
+        <th>Inbound</th>
+        <th>Outbound</th>
+        <th>Email</th>
+    </tr>
+`;
 
-          if(parts.length === 10) {
-            const dateTime = `<b>${parts[0]} ${parts[1]}</b>`;
-            const from = `<b>${parts[3]}</b>`;
-            const to = `<b>${parts[5].replace(/^\/+/, "")}</b>`;
+          logs.reverse().forEach((log, index) => {
+              let outboundColor = '';
+              if (log.Event === 1) {
+                  outboundColor = ' style="color: #e04141;"'; //red for blocked
+              }
+              else if (log.Event === 2) {
+                  outboundColor = ' style="color: #3c89e8;"'; //blue for proxies
+              }
 
-            let outboundColor = '';
-            if (parts[9] === "b") {
-              outboundColor = ' style="color: #e04141;"';
-            }
-            else if (parts[9] === "p") {
-              outboundColor = ' style="color: #3c89e8;"';
-            }
+              let text = ``;
+              if (log.Email !== "") {
+                  text = `<td>${log.Email}</td>`;
+              }
 
-            formattedLogs += `<span${outboundColor}>
-${dateTime}
- ${parts[2]}
- ${from}
- ${parts[4]}
- ${to}
- ${parts.slice(6,9).join(' ')}
-</span>`;
-          } else {
-            formattedLogs += `<span>${log}</span>`;
-          }
-        });
+              formattedLogs += `
+<tr ${outboundColor}>
+    <td><b>${new Date(log.DateTime).toLocaleString()}</b></td>
+    <td>${log.FromAddress}</td>
+    <td>${log.ToAddress}</td>
+    <td>${log.Inbound}</td>
+    <td>${log.Outbound}</td>
+    ${text}
+</tr>
+`;
+          });
 
-        return formattedLogs;
+          return formattedLogs += "</table>";
       },
-      hide() {
-        this.visible = false;
-      },
+        hide() {
+            this.visible = false;
+        },
     };
 
     const backupModal = {
@@ -738,6 +754,25 @@ ${dateTime}
               xraylogModal.show(msg.obj);
               await PromiseUtil.sleep(500);
               xraylogModal.loading = false;
+            },
+            downloadXrayLogs() {
+                if (!Array.isArray(this.xraylogModal.logs) || this.xraylogModal.logs.length === 0) {
+                    FileManager.downloadTextFile('', 'x-ui.log');
+                    return;
+                }
+                const lines = this.xraylogModal.logs.map(l => {
+                    try {
+                        const dt = l.DateTime ? new Date(l.DateTime) : null;
+                        const dateStr = dt && !isNaN(dt.getTime()) ? dt.toISOString() : '';
+                        const eventMap = { 0: 'DIRECT', 1: 'BLOCKED', 2: 'PROXY' };
+                        const eventText = eventMap[l.Event] || String(l.Event ?? '');
+                        const emailPart = l.Email ? ` Email=${l.Email}` : '';
+                        return `${dateStr} FROM=${l.FromAddress || ''} TO=${l.ToAddress || ''} INBOUND=${l.Inbound || ''} OUTBOUND=${l.Outbound || ''}${emailPart} EVENT=${eventText}`.trim();
+                    } catch (e) {
+                        return JSON.stringify(l);
+                    }
+                }).join('\n');
+                FileManager.downloadTextFile(lines, 'x-ui.log');
             },
             async openConfig() {
                 this.loading(true);
