--- a/internal/web/html/xui/form/reality_settings.html
+++ b/internal/web/html/xui/form/reality_settings.html
@@ -8,7 +8,7 @@
     </a-form-item>
     <a-form-item label='uTLS'>
         <a-select v-model="inbound.stream.reality.settings.fingerprint" style="width: 100%"
-            :dropdown-class-name="themeSwitcher.currentTheme">
+                  :dropdown-class-name="themeSwitcher.currentTheme">
             <a-select-option v-for="key in UTLS_FINGERPRINT" :value="key">[[ key ]]</a-select-option>
         </a-select>
     </a-form-item>
@@ -32,8 +32,10 @@
             <a-tooltip>
                 <template slot="title">
                     <span>{{ i18n "reset" }}</span>
-                </template> Short IDs <a-icon @click="inbound.stream.reality.shortIds = RandomUtil.randomShortIds()"
-                    type="sync"></a-icon>
+                </template>
+                Short IDs
+                <a-icon @click="inbound.stream.reality.shortIds = RandomUtil.randomShortIds()"
+                        type="sync"></a-icon>
             </a-tooltip>
         </template>
         <a-input v-model.trim="inbound.stream.reality.shortIds"></a-input>
