--- a/internal/web/html/xui/xray_balancer_modal.html
+++ b/internal/web/html/xui/xray_balancer_modal.html
@@ -1,21 +1,21 @@
 {{define "balancerModal"}}
-<a-modal 
-    id="balancer-modal"
-    v-model="balancerModal.visible"
-    :title="balancerModal.title"
-    @ok="balancerModal.ok"
-    :confirm-loading="balancerModal.confirmLoading"
-    :ok-button-props="{ props: { disabled: !balancerModal.isValid } }"
-    :closable="true"
-    :mask-closable="false"
-    :ok-text="balancerModal.okText"
-    cancel-text='{{ i18n "close" }}'
-    :class="themeSwitcher.currentTheme">
+<a-modal
+        id="balancer-modal"
+        v-model="balancerModal.visible"
+        :title="balancerModal.title"
+        @ok="balancerModal.ok"
+        :confirm-loading="balancerModal.confirmLoading"
+        :ok-button-props="{ props: { disabled: !balancerModal.isValid } }"
+        :closable="true"
+        :mask-closable="false"
+        :ok-text="balancerModal.okText"
+        cancel-text='{{ i18n "close" }}'
+        :class="themeSwitcher.currentTheme">
     <a-form :colon="false" :label-col="{ md: {span:8} }" :wrapper-col="{ md: {span:14} }">
         <a-form-item label='{{ i18n "pages.xray.balancer.tag" }}' has-feedback
-            :validate-status="balancerModal.duplicateTag? 'warning' : 'success'">
+                     :validate-status="balancerModal.duplicateTag? 'warning' : 'success'">
             <a-input v-model.trim="balancerModal.balancer.tag" @change="balancerModal.check()"
-                placeholder='{{ i18n "pages.xray.balancer.tagDesc" }}'></a-input>
+                     placeholder='{{ i18n "pages.xray.balancer.tagDesc" }}'></a-input>
         </a-form-item>
         <a-form-item label='{{ i18n "pages.xray.balancer.balancerStrategy" }}'>
             <a-select v-model="balancerModal.balancer.strategy" :dropdown-class-name="themeSwitcher.currentTheme">
@@ -26,16 +26,17 @@
             </a-select>
         </a-form-item>
         <a-form-item label='{{ i18n "pages.xray.balancer.balancerSelectors" }}' has-feedback
-            :validate-status="balancerModal.emptySelector? 'warning' : 'success'">
+                     :validate-status="balancerModal.emptySelector? 'warning' : 'success'">
             <a-select v-model="balancerModal.balancer.selector" mode="tags" @change="balancerModal.checkSelector()"
-                :dropdown-class-name="themeSwitcher.currentTheme">
+                      :dropdown-class-name="themeSwitcher.currentTheme">
                 <a-select-option v-for="tag in balancerModal.outboundTags" :value="tag">[[ tag ]]</a-select-option>
             </a-select>
         </a-form-item>
         <a-form-item label="Fallback">
             <a-select v-model="balancerModal.balancer.fallbackTag" clearable
-                :dropdown-class-name="themeSwitcher.currentTheme">
-                <a-select-option v-for="tag in [ '', ...balancerModal.outboundTags]" :value="tag">[[ tag ]]</a-select-option>
+                      :dropdown-class-name="themeSwitcher.currentTheme">
+                <a-select-option v-for="tag in [ '', ...balancerModal.outboundTags]" :value="tag">[[ tag ]]
+                </a-select-option>
             </a-select>
         </a-form-item>
         </table>
@@ -58,7 +59,7 @@
             fallbackTag: ''
         },
         outboundTags: [],
-        balancerTags:[],
+        balancerTags: [],
         ok() {
             if (balancerModal.balancer.selector.length == 0) {
                 balancerModal.emptySelector = true;
@@ -67,7 +68,10 @@
             balancerModal.emptySelector = false;
             ObjectUtil.execute(balancerModal.confirm, balancerModal.balancer);
         },
-        show({ title = '', okText = '{{ i18n "sure" }}', balancerTags = [], balancer, confirm = (balancer) => { }, isEdit = false }) {
+        show({
+                 title = '', okText = '{{ i18n "sure" }}', balancerTags = [], balancer, confirm = (balancer) => {
+            }, isEdit = false
+             }) {
             this.title = title;
             this.okText = okText;
             this.confirm = confirm;
@@ -92,7 +96,7 @@
             this.visible = false;
             this.loading(false);
         },
-        loading(loading=true) {
+        loading(loading = true) {
             this.confirmLoading = loading;
         },
         check() {
@@ -115,8 +119,7 @@
         data: {
             balancerModal: balancerModal
         },
-        methods: {
-        }
+        methods: {}
     });
 
 </script>
