--- a/internal/web/html/xui/xray_reverse_modal.html
+++ b/internal/web/html/xui/xray_reverse_modal.html
@@ -15,27 +15,27 @@
             <a-input v-model.trim="reverseModal.reverse.domain"></a-input>
         </a-form-item>
         <template v-if="reverseModal.reverse.type=='bridge'">
-        <a-form-item label='{{ i18n "pages.xray.outbound.intercon" }}'>
-            <a-select v-model="reverseModal.rules[0].outboundTag" :dropdown-class-name="themeSwitcher.currentTheme">
-                <a-select-option v-for="x in reverseModal.outboundTags" :value="x">[[ x ]]</a-select-option>
-            </a-select>
-        </a-form-item>
-        <a-form-item label='{{ i18n "pages.xray.rules.outbound" }}'>
-            <a-select v-model="reverseModal.rules[1].outboundTag" :dropdown-class-name="themeSwitcher.currentTheme">
-                <a-select-option v-for="x in reverseModal.outboundTags" :value="x">[[ x ]]</a-select-option>
-            </a-select>
-        </a-form-item>
+            <a-form-item label='{{ i18n "pages.xray.outbound.intercon" }}'>
+                <a-select v-model="reverseModal.rules[0].outboundTag" :dropdown-class-name="themeSwitcher.currentTheme">
+                    <a-select-option v-for="x in reverseModal.outboundTags" :value="x">[[ x ]]</a-select-option>
+                </a-select>
+            </a-form-item>
+            <a-form-item label='{{ i18n "pages.xray.rules.outbound" }}'>
+                <a-select v-model="reverseModal.rules[1].outboundTag" :dropdown-class-name="themeSwitcher.currentTheme">
+                    <a-select-option v-for="x in reverseModal.outboundTags" :value="x">[[ x ]]</a-select-option>
+                </a-select>
+            </a-form-item>
         </template>
         <template v-else>
             <a-form-item label='{{ i18n "pages.xray.outbound.intercon" }}'>
                 <a-checkbox-group
-                    v-model="reverseModal.rules[0].inboundTag"
-                    :options="reverseModal.inboundTags"></a-checkbox-group>
+                        v-model="reverseModal.rules[0].inboundTag"
+                        :options="reverseModal.inboundTags"></a-checkbox-group>
             </a-form-item>
             <a-form-item label='{{ i18n "pages.xray.rules.inbound" }}'>
                 <a-checkbox-group
-                    v-model="reverseModal.rules[1].inboundTag"
-                    :options="reverseModal.inboundTags"></a-checkbox-group>
+                        v-model="reverseModal.rules[1].inboundTag"
+                        :options="reverseModal.inboundTags"></a-checkbox-group>
             </a-form-item>
         </template>
     </a-form>
@@ -54,8 +54,8 @@
             domain: ""
         },
         rules: [
-            { outboundTag: '', inboundTag: []},
-            { outboundTag: '', inboundTag: []}
+            {outboundTag: '', inboundTag: []},
+            {outboundTag: '', inboundTag: []}
         ],
         inboundTags: [],
         outboundTags: [],
@@ -64,7 +64,7 @@
             reverseModal.rules[0].type = 'field';
             reverseModal.rules[1].type = 'field';
 
-            if(reverseModal.reverse.type == 'bridge'){
+            if (reverseModal.reverse.type == 'bridge') {
                 reverseModal.rules[0].inboundTag = [reverseModal.reverse.tag];
                 reverseModal.rules[1].inboundTag = [reverseModal.reverse.tag];
             } else {
@@ -73,22 +73,29 @@
             }
             ObjectUtil.execute(reverseModal.confirm, reverseModal.reverse, reverseModal.rules);
         },
-        show({ title='', okText='{{ i18n "sure" }}', reverse, rules, confirm=(reverse, rules)=>{}, isEdit=false  }) {
+        show({
+                 title = '', okText = '{{ i18n "sure" }}', reverse, rules, confirm = (reverse, rules) => {
+            }, isEdit = false
+             }) {
             this.title = title;
             this.okText = okText;
             this.confirm = confirm;
             this.visible = true;
-            if(isEdit) {
+            if (isEdit) {
                 this.reverse = {
                     tag: reverse.tag,
                     type: reverse.type,
                     domain: reverse.domain,
                 };
-                    reverse;
+                reverse;
                 rules0 = rules.filter(r => r.domain != null);
-                if(rules0.length == 0) rules0 = [{ outboundTag: '', domain: ["full:" + this.reverse.domain], inboundTag: []}];
+                if (rules0.length == 0) rules0 = [{
+                    outboundTag: '',
+                    domain: ["full:" + this.reverse.domain],
+                    inboundTag: []
+                }];
                 rules1 = rules.filter(r => r.domain == null);
-                if(rules1.length == 0) rules1 = [{ outboundTag: '', inboundTag: []}];
+                if (rules1.length == 0) rules1 = [{outboundTag: '', inboundTag: []}];
                 this.rules = [];
                 this.rules.push({
                     domain: rules0[0].domain,
@@ -106,8 +113,8 @@
                     domain: "reverse.xui"
                 }
                 this.rules = [
-                    { outboundTag: '', inboundTag: []},
-                    { outboundTag: '', inboundTag: []}
+                    {outboundTag: '', inboundTag: []},
+                    {outboundTag: '', inboundTag: []}
                 ]
             }
             this.isEdit = isEdit;
@@ -120,7 +127,7 @@
             reverseModal.visible = false;
             reverseModal.loading(false);
         },
-        loading(loading=true) {
+        loading(loading = true) {
             reverseModal.confirmLoading = loading;
         },
     };
@@ -130,7 +137,10 @@
         el: '#reverse-modal',
         data: {
             reverseModal: reverseModal,
-            reverseTypes: { bridge: '{{ i18n "pages.xray.outbound.bridge" }}', portal:'{{ i18n "pages.xray.outbound.portal" }}'},
+            reverseTypes: {
+                bridge: '{{ i18n "pages.xray.outbound.bridge" }}',
+                portal: '{{ i18n "pages.xray.outbound.portal" }}'
+            },
         },
     });
 
