--- a/internal/web/html/xui/settings.html
+++ b/internal/web/html/xui/settings.html
@@ -439,6 +439,8 @@
                                             <setting-list-item style="padding: 10px 20px" type="text" title='Interval'
                                                                v-model="fragmentInterval"
                                                                placeholder="10-20"></setting-list-item>
+                                            <setting-list-item style="padding: 10px 20px" title='MaxSplit' type="text"
+                                                               v-model="fragmentMaxSplit" placeholder="300-400"></setting-list-item>
                                         </a-collapse-panel>
                                     </a-collapse>
                                 </a-list-item>
@@ -644,7 +646,8 @@
                     fragment: {
                         packets: "tlshello",
                         length: "100-200",
-                        interval: "10-20"
+                        interval: "10-20",
+                        maxSplit: "300-400"
                     }
                 },
                 streamSettings: {
@@ -910,6 +913,16 @@
                         newFragment.settings.fragment.interval = v;
                         this.allSetting.subJsonFragment = JSON.stringify(newFragment);
                     }
+                }
+            },
+            fragmentMaxSplit: {
+                get: function () { return this.fragment ? JSON.parse(this.allSetting.subJsonFragment).settings.fragment.maxSplit : ""; },
+                set: function (v) {
+                if (v != "") {
+                    newFragment = JSON.parse(this.allSetting.subJsonFragment);
+                    newFragment.settings.fragment.maxSplit = v;
+                    this.allSetting.subJsonFragment = JSON.stringify(newFragment);
+                }
                 }
             },
             noises: {
